# sim-plugin-pybamm

./: README.md  pyproject.toml
src/sim_plugin_pybamm/: __init__.py
tests/: test_protocol.py  test_wheel_contents.py
