[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-plugin-pybamm"
version = "0.1.0"
description = "PyBaMM driver for sim."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Weiqi Ji", email = "jiweiqi10@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "sim-runtime @ git+https://github.com/svd-ai-lab/sim-cli@v0.2.4",
    # TODO(reviewer): pin the pybamm SDK here, e.g. "pybamm>=X.Y"
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "build>=1.0",
]

[project.entry-points."sim.drivers"]
pybamm = "sim_plugin_pybamm:PyBaMMLDriver"

[project.entry-points."sim.skills"]
pybamm = "sim_plugin_pybamm:skills_dir"

[project.entry-points."sim.plugins"]
pybamm = "sim_plugin_pybamm:plugin_info"

[project.urls]
Homepage = "https://github.com/svd-ai-lab/sim-plugin-pybamm"
Issues = "https://github.com/svd-ai-lab/sim-plugin-pybamm/issues"

[tool.hatch.metadata]
# Required because `sim-runtime` is pinned to a git+https URL — sim-cli is
# distributed via GitHub, not PyPI. See sim-proj memory: plugin distribution
# is GitHub-only.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sim_plugin_pybamm"]
